-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Networking
-
Fully Compatible
-
ALL
-
Platforms 2018-03-26
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Use of an uninitialized variable
Defect 103374 (STATIC_C)
Checker UNINIT (subcategory none)
File: /src/mongo/transport/asio_utils.h
Function mongo::transport::pollASIOSocket<asio::basic_stream_socket<asio::generic::stream_protocol>, int>(T1 &, T2, mongo::Duration<std::ratio<(long)1, (long)1000>>)
/src/mongo/transport/asio_utils.h, line: 131
Declaring variable "pollItem" without initializer.
pollfd pollItem;
/src/mongo/transport/asio_utils.h, line: 158
Using uninitialized value "pollItem.revents".
int revents = pollItem.revents;