SERVER-33654 Make sure pollfd has an initializer